# tree-sitter-epytext

./: .gitignore  Cargo.toml  LICENSE  README.md  binding.gyp  example.epytext  grammar.js  package-lock.json  package.json
queries/: highlights.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: bold.txt  code.txt  italic.txt  link.txt  plain.txt
